--- a/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
@@ -24,25 +24,23 @@
 				<span condition="Model.MarkNewbies && Model.NewbieAuthors.Any(a => a == author.Name)" class="badge bg-success text-white">New Author</span>
 			</cardheader>
 			<cardbody>
-				<ul style="list-style-type: none;">
-					@foreach (var pub in author.Pubs)
-					{
-						var tierIconPath2x = "";
-						var tierIconPath4x = "";
-						if (pub.TierIconPath != null)
-						{
-							tierIconPath2x = $"{pub.TierIconPath.Split('.')[0]}-2x.png";
-							tierIconPath4x = $"{pub.TierIconPath.Split('.')[0]}-4x.png";
-						}
-						<li>
-							<img style="width: 18px" condition="Model.ShowTiers" src="/@tierIconPath2x"
-								srcset="/@pub.TierIconPath .5x,
-								/@tierIconPath2x 1x,
-								/@tierIconPath4x 2x" />
-							<a href="@(pub.Id)M"> @pub.Title </a>
-						</li>
-					}
-				</ul>
+                <ul style="list-style-type: none;">
+                    @foreach (var pub in author.Pubs)
+                    {
+                        <li>
+                            @if (pub.TierIconPath != null)
+                            {
+                                var tierIconPath2x = $"{pub.TierIconPath.Split('.')[0]}-2x.png";
+                                var tierIconPath4x = $"{pub.TierIconPath.Split('.')[0]}-4x.png";
+                                <img style="width: 18px" condition="Model.ShowTiers" src="/@tierIconPath2x"
+                                     srcset="/@pub.TierIconPath .5x,
+									/@tierIconPath2x 1x,
+									/@tierIconPath4x 2x" />
+                            }
+                            <pub-link id="pub.Id"> @pub.Title </pub-link>
+                        </li>
+                    }
+                </ul>
 			</cardbody>
 		</card>
 		
