--- a/TASVideos/Pages/Shared/_Pager.cshtml
+++ b/TASVideos/Pages/Shared/_Pager.cshtml
@@ -1,7 +1,7 @@
 @using TASVideos.Core
 @model IPaged
 
-<row class="mb-1">
+<row class="my-1 align-items-center">
 	<div class="col-md-4 float-start" condition="@Model.LastPage() > 1">
 		<a
 			disable="@Model.CurrentPage == 1"
