de-normalize posts with forum id, use it to query latest post on /forum page (no ui yet)

--- a/TASVideos/Pages/Forum/_Category.cshtml
+++ b/TASVideos/Pages/Forum/_Category.cshtml
@@ -1,4 +1,4 @@
-﻿@model TASVideos.Data.Entity.Forum.ForumCategory
+﻿@model TASVideos.Pages.Forum.Models.ForumCategoryModel
 
 <card class="mb-2">
 	<cardheader>
