--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -315,3 +315,7 @@ article.wiki, .postbody {
 .card-body-userinfo {
 	padding: 3px;
 }
+
+.border-card {
+	border-color: var(--bs-gray-400) !important;
+}
