--- a/TASVideos/Pages/Forum/_Category.cshtml
+++ b/TASVideos/Pages/Forum/_Category.cshtml
@@ -11,19 +11,37 @@
 			</div>
 		}
 	</cardheader>
-	<cardbody>
+	<cardheader class="py-0 text-muted">
+		<row>
+			<div class="col-8"><small>Subforum</small></div>
+			<div class="col-4"><small>Last Post</small></div>
+		</row>
+	</cardheader>
+	<cardbody class="py-0">
 		@foreach (var forum in Model.Forums
 			.OrderBy(f => f.Ordinal)
 			.Where(f => ViewData.UserHas(PermissionTo.SeeRestrictedForums) || !f.Restricted))
 		{
-			<strong>
-				<a asp-page="/Forum/Subforum/Index" asp-route-id="@forum.Id">@forum.Name</a>
-			</strong>
-			<div class="mb-2 ps-3">
-				<small>
-					@Html.Raw(forum.Description)
-				</small>
+		<row class="py-1 border-bottom border-card align-items-center">
+			<div class="col-8">
+				<strong>
+					<a asp-page="/Forum/Subforum/Index" asp-route-id="@forum.Id">@forum.Name</a>
+				</strong>
+				<div class="ps-3">
+					<small>
+						@Html.Raw(forum.Description)
+					</small>
+				</div>
 			</div>
+			@if (forum.LastPost != null)
+			{
+				<div class="col-4 align-items-center">
+					<timezone-convert asp-for="@forum.LastPost.CreateTimestamp" /> <br />
+					<profile-link username="@forum.LastPost.CreateUserName"></profile-link>
+					<a href="/Forum/Posts/@forum.LastPost.Id#@forum.LastPost.Id" class="fa fa-arrow-circle-right"></a>
+				</div>
+			}
+			</row>
 		}
 	</cardbody>
 </card>
