--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -25,8 +25,8 @@
 	<table class="table table-striped table-bordered">
 		<tr>
 			<th>Topics</th>
-			<th>Replies</th>
-			<th>Author</th>
+			<th class="d-none d-md-table-cell">Replies</th>
+			<th class="d-none d-md-table-cell">Author</th>
 			<td>Last Post</td>
 		</tr>
 		@foreach (var topic in Model.Forum.Topics)
@@ -35,10 +35,36 @@
 				<td>
 					<span condition="@(topic.Type == ForumTopicType.Announcement)" class="fw-bold"><i class="fa fa-bullhorn"></i> Announcement: </span>
 					<span condition="@(topic.Type == ForumTopicType.Sticky)" class="fw-bold"><i class="fa fa-sticky-note"></i> Sticky: </span>
-					<a asp-page="/Forum/Topics/Index" asp-route-id="@topic.Id">@topic.Title</a>
+					<a asp-page="/Forum/Topics/Index" asp-route-id="@topic.Id" class="fw-bold">@topic.Title</a>
+					<div class="ms-2">
+						@{
+							var totalPages = (topic.PostCount - 1) / ForumConstants.PostsPerPage + 1;
+							if (totalPages > 1)
+							{
+								for (int pageNumber = 1; pageNumber <= totalPages; pageNumber++)
+								{
+									<text>
+										<a asp-page="/Forum/Topics/Index"
+										   asp-route-id="@topic.Id"
+										   asp-route-CurrentPage="@pageNumber"
+										   asp-route-PageSize="@ForumConstants.PostsPerPage"
+										   asp-route-Sort="CreateTimestamp"
+										   class="btn btn-outline-primary btn-sm mt-1">
+											@pageNumber
+										</a>
+									</text>
+									if (totalPages > 5 && pageNumber == 2)
+									{
+										pageNumber = totalPages - 2;
+										<text><span>…</span></text>
+									}
+								}
+							}
+						}
+					</div>
 				</td>
-				<td>@Math.Max(0, topic.PostCount - 1)</td> @*Imported Submission Topics will have no replies and no original post*@
-				<td> <profile-link username="@topic.CreateUserName"></profile-link></td>
+				<td class="d-none d-md-table-cell">@Math.Max(0, topic.PostCount - 1)</td> @*Imported Submission Topics will have no replies and no original post*@
+				<td class="d-none d-md-table-cell"> <profile-link username="@topic.CreateUserName"></profile-link></td>
 				<td>
 					@if (topic.LastPost != null)
 					{
