fix some stylecop nags and a few other cleanups

--- a/TASVideos/Pages/Shared/Components/SupportedMovieTypes/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/SupportedMovieTypes/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IReadOnlyDictionary<string, DeprecatedMovieFormat?>
+﻿@model IReadOnlyDictionary<string, DeprecatedMovieFormat>
 @{ 
 	var entries = Model.Select(m => $"{m.Key}{(m.Value?.Deprecated == true ? " (not submittable) " : "")}");
 }
