--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -1,54 +1,54 @@
 <navbar class="flex-wrap me-2 me-md-0 fw-bold">
-	<nav-dropdown activate="Home">
-		<a class="dropdown-item" href="/">Home</a>
-		<a class="dropdown-item" href="/WelcomeToTASVideos">Welcome</a>
-		<a class="dropdown-item" href="/News">News</a>
+	<nav-dropdown id="HomeDropdown" activate="Home">
+		<a id="Home" class="dropdown-item" href="/">Home</a>
+		<a id="Welcome" class="dropdown-item" href="/WelcomeToTASVideos">Welcome</a>
+		<a id="News" class="dropdown-item" href="/News">News</a>
 	</nav-dropdown>
 	<nav-item activate="Movies">
-		<a class="nav-link" href="/Movies">Movies</a>
+		<a id="Movies" class="nav-link" href="/Movies">Movies</a>
 	</nav-item>
 	<nav-item activate="Game Resources">
-		<a class="nav-link" href="/GameResources">Game&nbsp;Resources</a>
+		<a id="GameResources" class="nav-link" href="/GameResources">Game&nbsp;Resources</a>
 	</nav-item>
 	<nav-item activate="ArticleIndex">
-		<a class="nav-link" href="/ArticleIndex">Articles</a>
+		<a id="Articles" class="nav-link" href="/ArticleIndex">Articles</a>
 	</nav-item>
 	<nav-item activate="Emulators">
-		<a class="nav-link" href="/EmulatorResources">Emulators</a>
+		<a id="Emulators" class="nav-link" href="/EmulatorResources">Emulators</a>
 	</nav-item>
 	<nav-item activate="Submissions">
-		<a class="nav-link" asp-page="/Submissions/Index">Submissions</a>
+		<a id="Submissions" class="nav-link" asp-page="/Submissions/Index">Submissions</a>
 	</nav-item>
 	<nav-item activate="Forum">
-		<a class="nav-link" asp-page="/Forum/Index">Forum</a>
+		<a id="Forum" class="nav-link" asp-page="/Forum/Index">Forum</a>
 	</nav-item>
 	<nav-item activate="Staff">
-		<a class="nav-link" href="/Users">Staff</a>
+		<a id="Staff" class="nav-link" href="/Users">Staff</a>
 	</nav-item>
-	<nav-dropdown activate="Admin"
+	<nav-dropdown id="AdminDropdown" activate="Admin"
 				  permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers, PermissionTo.EditRoles, PermissionTo.TagMaintenance, PermissionTo.CatalogMovies }">
-		<a class="dropdown-item" href="/MediaPosts">Media Posts</a>
-		<a permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers }" class="dropdown-item" asp-page="/Users/List">Users</a>
-		<a class="dropdown-item" asp-page="/Roles/List">Roles</a>
-		<a class="dropdown-item" asp-page="/Permissions/Index">Permissions</a>
-		<a permission="CatalogMovies" class="dropdown-item" asp-page="/Games/List">Games</a>
-		<a permission="TagMaintenance" class="dropdown-item" asp-page="/Tags/Index">Tag Maintenance</a>
-		<a permission="FlagMaintenance" class="dropdown-item" asp-page="/Flags/Index">Flag Maintenance</a>
-		<a Permission="TierMaintenance" class="dropdown-item" asp-page="/Tiers/Index">Tier Maintenance</a>
+		<a id="MediaPosts" class="dropdown-item" href="/MediaPosts">Media Posts</a>
+		<a id="Users" permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers }" class="dropdown-item" asp-page="/Users/List">Users</a>
+		<a id="Roles" class="dropdown-item" asp-page="/Roles/List">Roles</a>
+		<a id="Permissions" class="dropdown-item" asp-page="/Permissions/Index">Permissions</a>
+		<a id="Games" permission="CatalogMovies" class="dropdown-item" asp-page="/Games/List">Games</a>
+		<a id="TagMaintenance" permission="TagMaintenance" class="dropdown-item" asp-page="/Tags/Index">Tag Maintenance</a>
+		<a id="FlagMaintenance" permission="FlagMaintenance" class="dropdown-item" asp-page="/Flags/Index">Flag Maintenance</a>
+		<a id="TierMaintenance" Permission="TierMaintenance" class="dropdown-item" asp-page="/Tiers/Index">Tier Maintenance</a>
 	</nav-dropdown>
-	<nav-dropdown activate="Wiki"
+	<nav-dropdown id="WikiDropdown" activate="Wiki"
 				  permissions="new[] { PermissionTo.EditWikiPages, PermissionTo.EditSystemPages, PermissionTo.MoveWikiPages, PermissionTo.DeleteWikiPages }">
-		<a class="dropdown-item" href="/SandBox">SandBox</a>
-		<a class="dropdown-item" href="/RecentChanges">Recent Changes</a>
-		<a class="dropdown-item" href="/WikiOrphans">Orphans</a>
-		<a class="dropdown-item" href="/TODO">To Do</a>
-		<a class="dropdown-item" href="/System">System Pages</a>
-		<a permission="SeeDeletedWikiPages" asp-page="/Wiki/DeletedPages" class="dropdown-item">Deleted Pages</a>
+		<a id="SandBox" class="dropdown-item" href="/SandBox">SandBox</a>
+		<a id="RecentChanges" class="dropdown-item" href="/RecentChanges">Recent Changes</a>
+		<a id="Orphans" class="dropdown-item" href="/WikiOrphans">Orphans</a>
+		<a id="Todo"class="dropdown-item" href="/TODO">To Do</a>
+		<a id="SystemPages" class="dropdown-item" href="/System">System Pages</a>
+		<a id="DeletedPages" permission="SeeDeletedWikiPages" asp-page="/Wiki/DeletedPages" class="dropdown-item">Deleted Pages</a>
 	</nav-dropdown>
-	<nav-dropdown activate='<i class="fa fa-adjust"></i>'>
-		<button class="dropdown-item" onclick="forceDarkMode()"><i class="fa fa-moon-o"></i> Dark</button>
-		<button class="dropdown-item" onclick="forceLightMode()"><i class="fa fa-sun-o"></i> Light</button>
-		<button class="dropdown-item" onclick="autoDarkMode()">Auto</button>
+	<nav-dropdown id="DarkDropdown" activate='<i class="fa fa-adjust"></i>'>
+		<button id="Dark" class="dropdown-item" onclick="forceDarkMode()"><i class="fa fa-moon-o"></i> Dark</button>
+		<button id="Light" class="dropdown-item" onclick="forceLightMode()"><i class="fa fa-sun-o"></i> Light</button>
+		<button id="Auto" class="dropdown-item" onclick="autoDarkMode()">Auto</button>
 	</nav-dropdown>
 	
 </navbar>
