--- a/TASVideos/Pages/Shared/_LoginPartial.cshtml
+++ b/TASVideos/Pages/Shared/_LoginPartial.cshtml
@@ -15,22 +15,22 @@
 		<form asp-page="/Account/Logout" method="post" id="logoutForm">
 			<navbar>
 				<nav-item activate="Messages">
-					<a class="nav-link text-nowrap" asp-page="/Messages/Inbox">
+					<a id="Inbox" class="nav-link text-nowrap" asp-page="/Messages/Inbox">
 						<span condition="notificationCount > 0" class="badge bg-danger text-white">@notificationCount</span>
 						<span condition="notificationCount > 0" class="sr-only">unread messages</span>
 						<span class="fa fa-envelope"></span>
 					</a>
 				</nav-item>
 				<nav-item activate="Profile">
-					<a class="nav-link" asp-page="/Profile/Index" title="Manage">
+					<a id="Manage" class="nav-link" asp-page="/Profile/Index" title="Manage">
 						<i class="fa fa-user d-inline"></i>&nbsp;@User.Name()
 					</a>
 				</nav-item>
 				<nav-item>
-					<button type="submit" class="btn btn-link navbar-btn nav-link text-nowrap"><i class="fa fa-sign-out"></i> Log out</button>
+					<button id="Logout" type="submit" class="btn btn-link navbar-btn nav-link text-nowrap"><i class="fa fa-sign-out"></i> Log out</button>
 				</nav-item>
 				<nav-item activate="Search">
-					<a class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
+					<a id="Search" class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
 				</nav-item>
 			</navbar>
 		</form>
@@ -39,13 +39,13 @@
 	{
 		<navbar>
 			<nav-item activate="Register">
-				<a class="nav-link" asp-page="/Account/Register">Register</a>
+				<a id="Register" class="nav-link" asp-page="/Account/Register">Register</a>
 			</nav-item>
 			<nav-item activate="Login">
-				<a class="nav-link text-nowrap" asp-page="/Account/Login" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()"><i class="fa fa-sign-in"></i> Log in</a>
+				<a id="Login" class="nav-link text-nowrap" asp-page="/Account/Login" asp-route-returnUrl="@Context.CurrentPathToReturnUrl()"><i class="fa fa-sign-in"></i> Log in</a>
 			</nav-item>
 			<nav-item activate="Search">
-				<a class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
+				<a id="Search" class="nav-link text-nowrap" asp-page="/Search/Index"><i class="fa fa-search"></i> Search</a>
 			</nav-item>
 		</navbar>
 	}
