--- a/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/MoviesByAuthor/Default.cshtml
@@ -24,25 +24,25 @@
 				<span condition="Model.MarkNewbies && Model.NewbieAuthors.Any(a => a == author.Name)" class="badge bg-success text-white">New Author</span>
 			</cardheader>
 			<cardbody>
-                <ul style="list-style-type: none;">
-                    @foreach (var pub in author.Pubs)
-                    {
-                        <li>
-                            @if (pub.TierIconPath != null)
-                            {
-                                var tierIconPath2x = $"{pub.TierIconPath.Split('.')[0]}-2x.png";
-                                var tierIconPath4x = $"{pub.TierIconPath.Split('.')[0]}-4x.png";
-                                <img style="width: 18px" condition="Model.ShowTiers" src="/@tierIconPath2x"
-                                     srcset="/@pub.TierIconPath .5x,
-									/@tierIconPath2x 1x,
-									/@tierIconPath4x 2x" />
-                            }
-                            <pub-link id="pub.Id"> @pub.Title </pub-link>
-                        </li>
-                    }
-                </ul>
+				<ul style="list-style-type: none;">
+					@foreach (var pub in author.Pubs)
+					{
+						<li>
+							@if (pub.PublicationClassIconPath != null)
+							{
+								var classIconPath2X = $"{pub.PublicationClassIconPath.Split('.')[0]}-2x.png";
+								var classIconPath4X = $"{pub.PublicationClassIconPath.Split('.')[0]}-4x.png";
+								<img style="width: 18px" condition="Model.ShowClasses" src="/@classIconPath2X"
+									 srcset="/@pub.PublicationClassIconPath .5x,
+									/@classIconPath2X 1x,
+									/@classIconPath4X 2x" />
+							}
+							<pub-link id="pub.Id"> @pub.Title </pub-link>
+						</li>
+					}
+				</ul>
 			</cardbody>
 		</card>
-		
+
 	}
 </div>
