--- a/TASVideos/Pages/Submissions/Publish.cshtml
+++ b/TASVideos/Pages/Submissions/Publish.cshtml
@@ -11,8 +11,8 @@
 		<row>
 			<column lg="6">
 				<row>
-					<label class="col-sm-3" asp-for="Submission.Tier"></label>
-					<span class="col-sm-9"><a href="/@Model.Submission.Tier">@Html.DisplayFor(m => m.Submission.Tier)</a></span>
+					<label class="col-sm-3" asp-for="Submission.PublicationClass"></label>
+					<span class="col-sm-9"><a href="/@Model.Submission.PublicationClass">@Html.DisplayFor(m => m.Submission.PublicationClass)</a></span>
 				</row>
 				<row>
 					<label class="col-sm-3" asp-for="Submission.SystemCode"></label>
