--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -34,7 +34,7 @@
 		<a permission="CatalogMovies" class="dropdown-item" asp-page="/Games/List">Games</a>
 		<a permission="TagMaintenance" class="dropdown-item" asp-page="/Tags/Index">Tag Maintenance</a>
 		<a permission="FlagMaintenance" class="dropdown-item" asp-page="/Flags/Index">Flag Maintenance</a>
-		<a Permission="TierMaintenance" class="dropdown-item" asp-page="/Tiers/Index">Tier Maintenance</a>
+		<a Permission="ClassMaintenance" class="dropdown-item" asp-page="/PublicationClasses/Index">Class Maintenance</a>
 	</nav-dropdown>
 	<nav-dropdown activate="Wiki"
 				  permissions="new[] { PermissionTo.EditWikiPages, PermissionTo.EditSystemPages, PermissionTo.MoveWikiPages, PermissionTo.DeleteWikiPages }">
