--- a/TASVideos/Pages/Forum/Topics/Split.cshtml
+++ b/TASVideos/Pages/Forum/Topics/Split.cshtml
@@ -24,7 +24,7 @@
 		<input type="text" asp-for="Topic.SplitTopicName" class="form-control" />
 		<span asp-validation-for="Topic.SplitTopicName" class="text-danger"></span>
 	</form-group>
-	<div class="border border-info" style="max-height: 500px; overflow-y: auto;">
+	<div class="border border-info">
 		<label asp-for="Topic.PostToSplitId" class="form-control-label"></label>
 		<span asp-validation-for="Topic.PostToSplitId" class="text-danger"></span>
 		<small>
