--- a/TASVideos/Pages/Wiki/PageHistory.cshtml
+++ b/TASVideos/Pages/Wiki/PageHistory.cshtml
@@ -5,7 +5,7 @@
 	ViewData["Title"] = "Page History For " + Model.History.PageName;
 }
 <a class="btn btn-secondary" href="/@WikiHelper.ProcessLink(Model.History.PageName)"><span class="fa fa-arrow-left"></span> Back to Page</a>
-<div id="diff-view" class="d-none mt-3 border border-secondary" style="max-height: 400px; overflow-y: auto">
+<div id="diff-view" class="d-none mt-3 border border-secondary">
 
 </div>
 <div id="diff-options" class="d-none">
