--- a/TASVideos/Pages/Diagnostics/Index.cshtml
+++ b/TASVideos/Pages/Diagnostics/Index.cshtml
@@ -2,7 +2,7 @@
 @{ ViewData["Title"] = "System Information"; }
 @model IndexModel
 @using System.Diagnostics
-@inject ApplicationDbContext db
+@inject ApplicationDbContext _db
 @functions {
 	private string GetProcessInfo()
 	{
@@ -17,6 +17,12 @@
 		}
 	}
 }
+<ul>
+	<li><a asp-page="CacheControl">Cache Control</a></li>
+	<li><a asp-page="ExternalDependencies">External Dependencies</a></li>
+	<li><a asp-page="PlayerPoints">Player Points</a></li>
+	<li><a asp-page="WikiSyntaxErrors">Wiki Syntax Errors</a></li>
+</ul>
 
 <table class="table table-bordered table-striped">
 	<tr><td>Version</td><td>@ViewData["Version"]</td></tr>
@@ -26,7 +32,7 @@
 	<tr><td>Processor Count</td><td>@Environment.ProcessorCount</td></tr>
 	<tr><td>ASPNETCORE_ENVIRONMENT</td><td>@Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</td></tr>
 	<tr><td>Total Memory Usage</td><td>@GetProcessInfo()</td></tr>
-	<tr><td>Database Provider</td><td>@db.Database.ProviderName</td></tr>
+	<tr><td>Database Provider</td><td>@_db.Database.ProviderName</td></tr>
 </table>
 
 <hr />
