--- a/TASVideos/Pages/Diagnostics/Index.cshtml
+++ b/TASVideos/Pages/Diagnostics/Index.cshtml
@@ -2,7 +2,9 @@
 @{ ViewData["Title"] = "System Information"; }
 @model IndexModel
 @using System.Diagnostics
+@using Microsoft.AspNetCore.Hosting
 @inject ApplicationDbContext _db
+@inject IWebHostEnvironment _env
 @functions {
 	private string GetProcessInfo()
 	{
@@ -26,11 +28,11 @@
 
 <table class="table table-bordered table-striped">
 	<tr><td>Version</td><td>@ViewData["Version"]</td></tr>
+	<tr><td>Environment Name</td><td>@_env.EnvironmentName</td></tr>
 	<tr><td>MachineName</td><td>@Environment.MachineName</td></tr>
 	<tr><td>Is 64 Bit</td><td>@Environment.Is64BitOperatingSystem</td></tr>
 	<tr><td>OS Version</td><td>@Environment.OSVersion.ToString()</td></tr>
 	<tr><td>Processor Count</td><td>@Environment.ProcessorCount</td></tr>
-	<tr><td>ASPNETCORE_ENVIRONMENT</td><td>@Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</td></tr>
 	<tr><td>Total Memory Usage</td><td>@GetProcessInfo()</td></tr>
 	<tr><td>Database Provider</td><td>@_db.Database.ProviderName</td></tr>
 </table>
