--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -351,3 +351,10 @@ article.wiki, .postbody {
 #button-scrolltop {
 	font-size: 28px;
 }
+
+tt, code, kbd, pre, samp {
+	background: var(--bs-gray-400);
+	border-radius: 5px;
+	padding: 0.125rem 0.375rem;
+	font-size: 85%;
+}
